# pumpkin-app

./: README.md  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
config/: configuration.toml  features.toml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/features/config/components/: settings_card.dart
lib/features/config/config/: configuration.dart  features.dart
lib/features/config/controllers/: config.dart  config.g.dart  features.dart
lib/features/config/models/: config.dart
lib/rust/src/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/rust/src/api/: simple.dart
lib/shared/utils/: platform.dart
lib/src/rust/: frb_generated.dart
lib/theme/: text_theme.dart  theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_frb_testing.podspec  rust_lib_pumpkin_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_frb_testing.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+40 files in other folders)
