[package]
name = "rust_lib_pumpkin_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
pumpkin = { path = "Pumpkin/pumpkin" }
log = "0.4.22"
android_logger = "0.14.1"
tokio = { version = "1.42", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
] }
