[package]
name = "rust_lib_pumpkin_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git" }
uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "std",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
