[package]
name = "rust_lib_pumpkin_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
crossbeam-channel = "0.5.15"
flutter_rust_bridge = "=2.10.0"
futures = "0.3.31"
log = "0.4.27"
parking_lot = "0.12.4"
# pumpkin = { git = "https://github.com/EricApostal/Pumpkin.git" }
pumpkin = { path = "/home/eric/Documents/development/languages/rust/Pumpkin/pumpkin" }
rcon-client = "0.1.3"
uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "std",
] }
android_logger = "0.15.1"
num_cpus = "1.17.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
